other/allowed-image-repos/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: allowed-image-repos-ns
spec:
  containers:
    - name: pod-01
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: allowed-image-repos-ns
spec:
  containers:
    - name: pod-01
      image: myknownimage
    - name: pod-02
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  namespace: allowed-image-repos-ns
spec:
  initContainers:
    - name: pod-01-init
      image: ghcr.io/kyverno/test-busybox:1.35
    - name: pod-02-init
      image: myknownimage
  containers:
    - name: pod-01
      image: myknownimage
    - name: pod-02
      image: kyverno
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
  namespace: allowed-image-repos-ns
spec:
  initContainers:
    - name: pod-01-init
      image: myknownimage
    - name: pod-02-init
      image: myknownimage
  containers:
    - name: pod-01
      image: myknownimage
    - name: pod-02
      image: docker.io/busybox:1.35
