other/allowed-image-repos/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allowed-image-repos
status:
  ready: true
